--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,43 @@ gunicorn = "==19.7.1"
 flask-restplus = "*"
 python-dotenv = "*"
 flask = "*"
+alembic = "1.0.8"
+aniso8601 = "4.0.1"
+atomicwrites = "1.2.1"
+attrs = "18.2.0"
+bumpversion = "0.5.3"
+Click = "7.0"
+coverage = "4.5.2"
+Flask = "1.0.2"
+Flask-Cors = "3.0.7"
+Flask-Migrate = "1.8.0"
+flask-restplus = "0.12.1"
+Flask-Script = "2.0.6"
+Flask-SQLAlchemy = "2.1"
+gunicorn = "19.7.1"
+itsdangerous = "1.1.0"
+Jinja2 = "2.10"
+jsonschema = "2.6.0"
+Mako = "1.0.8"
+MarkupSafe = "1.1.0"
+more-itertools = "4.3.0"
+packaging = "18.0"
+pkg-resources = "0.0.0"
+pluggy = "0.8.0"
+psycopg2 = "2.6.1"
+py = "1.7.0"
+pyparsing = "2.3.0"
+pytest = "3.10.1"
+pytest-cov = "2.6.0"
+pytest-sugar = "0.9.2"
+python-dateutil = "2.8.0"
+python-dotenv = "0.9.1"
+python-editor = "1.0.4"
+pytz = "2018.7
+six = "1.11.0"
+SQLAlchemy = "1.3.1"
+termcolor = "1.1.0"
+Werkzeug = "0.14.1"
 
 [dev-packages]
 pytest = "*"
